added purchased_at field to Assets table, modified frontend to accomodate
